--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       WORDPRESS_DB_NAME: "${RDS_DB_NAME}"
     volumes:
       # This assumes that your EFS file system is mounted on the EC2 instance at this path.
-      - /mnt/efs/wordpress_data:/var/www/html
+      - ~/:/var/www/html
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
