--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       WORDPRESS_DB_USER: "${RDS_USER}"
       WORDPRESS_DB_PASSWORD: "${RDS_PASSWORD}"
       WORDPRESS_DB_NAME: "${RDS_DB_NAME}"
+     volumes:
+      # Mount a local directory to the container's web root (/var/www/html)
+      - ./wordpress:/var/www/html
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
