--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       WORDPRESS_DB_PASSWORD: "${RDS_PASSWORD}"
       WORDPRESS_DB_NAME: "${RDS_DB_NAME}"
     volumes:
-      - wordpress_data:/var/www/html/wordpress
+      - ./wordpress:/var/www/html
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
@@ -25,6 +25,3 @@ services:
       PMA_HOST: "${RDS_HOST}"
       PMA_PORT: "3306"
       PMA_ARBITRARY: "1"
-
-volumes:
-  wordpress_data:
